--- a/.drone.yml
+++ b/.drone.yml
@@ -12,5 +12,5 @@ steps:
   - go build
   - go test
   - echo $USERNAME
-  - echo $USERNAME > b.txt
-  - cat b.txt
+  - echo $USERNAME > a.txt
+  - cat a.txt
