--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,10 @@
 ---
 kind: pipeline
 name: default
-
+platform:
+  os: linux
+  arch: arm64
+  
 steps:
 - name: backend
   image: golang:1.13-alpine
